# wp-img-optimizer-tauri

./: CHANGELOG.md  QUICKSTART.md  README.md  TAURI_MIGRATION_GUIDE.md  config.example.json  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  image.rs  mod.rs  openai.rs  wordpress.rs
src-tauri/src/models/: config.rs  task.rs
src/components/features/: ImageUploader.tsx  Settings.tsx
src/components/ui/: button.tsx  tabs.tsx
src/lib/: image-processor.ts  tauri-api.ts  utils.ts
src/types/: index.ts
